kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: instapay
  labels:
    name: instapay
