kubernetes/discovery-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-service
  namespace: instapay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery-service
  template:
    metadata:
      labels:
        app: discovery-service
    spec:
      containers:
      - name: instapay-discovery
        image: instapay-discovery-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8761
        volumeMounts:
        - name: zipkin-config-volume
          mountPath: /config
        
        resources:
          requests:
            memory: "384Mi"
            cpu: "200m"
          limits:
            memory: "1024Mi"
            cpu: "500m"
      volumes:
      - name: zipkin-config-volume
        configMap:
          name: zipkin-config
---
apiVersion: v1
kind: Service
metadata:
  name: discovery-service
  namespace: instapay
spec:
  selector:
    app: discovery-service
  ports:
  - port: 8761
    targetPort: 8761
    nodePort: 30002  
  type: NodePort
