kubernetes/reporting-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reporting-service
  namespace: instapay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reporting-service
  template:
    metadata:
      labels:
        app: reporting-service
    spec:
      containers:
      - name: instapay-reporting-service
        image: instapay-reporting-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8083
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "1Gi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: reporting-service
  namespace: instapay
spec:
  selector:
    app: reporting-service
  ports:
  - port: 8083
    targetPort: 8083
    nodePort: 30004  
  type: NodePort
