kubernetes/zipkin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin
  namespace: instapay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zipkin
  template:
    metadata:
      labels:
        app: zipkin
    spec:
      containers:
      - name: zipkin
        image: openzipkin/zipkin:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9411
        args: ["--STORAGE_TYPE=mem", "--server.port=9411", "--server.address=0.0.0.0"]
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "300m"
---
apiVersion: v1
kind: Service
metadata:
  name: zipkin
  namespace: instapay
spec:
  selector:
    app: zipkin
  ports:
  - port: 9411
    targetPort: 9411
    nodePort: 30007  
  type: NodePort
